HTML docs: Remove hidden divs

--- a/files/en-us/web/html/element/template/index.html
+++ b/files/en-us/web/html/element/template/index.html
@@ -121,14 +121,12 @@ if ('content' in document.createElement('template')) {
 
 <p>The result is the original HTML table, with two new rows appended to it via JavaScript:</p>
 
-<div class="hidden">
-<pre class="brush: css">table {
+<pre class="brush: css hidden">table {
   background: #000;
 }
 table td {
   background: #fff;
 }</pre>
-</div>
 
 <p>{{EmbedLiveSample("Examples", 500, 120)}}</p>
 
